<resources>
    <string name="app_name">CalculIMC</string>
    <string name="titre_imc">Calcul de l\'IMC</string>
    <string name="hint_poids">Poids en kg</string>
    <string name="hint_taille">Taille en m</string>
    <string name="bouton_calculer">Calculer</string>
    <string name="bouton_effacer">Effacer</string>
    <string name="resultat_imc_defaut"></string>
    <string name="resultat_categorie_defaut"></string>
    <string name="erreur_champs_vides">Veuillez renseigner le poids et la taille</string>
    <string name="erreur_valeurs_invalides">Le poids et la taille doivent être des nombres positifs</string>
    <string name="categorie_insuffisance">Insuffisance pondérale</string>
    <string name="categorie_normale">Corpulence normale</string>
    <string name="categorie_surpoids">Surpoids</string>
    <string name="categorie_obesite_moderee">Obésité modérée</string>
    <string name="categorie_obesite_severe">Obésité sévère</string>
    <string name="categorie_obesite_morbide">Obésité morbide</string>
</resources>